--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <td><img src="images/ved.png" alt="This is Ved Picture" width="200"></td>
         <td><h1>Ved Prakash</h1>
         <p><em><strong>Founder</strong> and <strong>Creater</strong> of this Page</em></p>
-        <p>I am a student at <a href="http://sliet.ac.in/" target="_blank">Sant Longowal Institute of Engineering and Technology</a>. My hometown is Sasaram, Bihar</p></td>
+        <p>I am an engineering student at <a href="http://sliet.ac.in/" target="_blank">Sant Longowal Institute of Engineering and Technology</a>. My hometown is Sasaram, Bihar</p></td>
       </tr>
     </table>
     <hr size='2'>
