--- a/ContactMe.html
+++ b/ContactMe.html
@@ -9,13 +9,13 @@
   Sasaram-821115, Rohtas, Bihar <br>
   Mobile: 7004634985</p>
   <hr>
-  <form class="" action="mailto:vs039037@gmail.com" method="post">
+  <form action="mailto:vs039037@gmail.com" method="post">
     <label>Your Name:</label>
     <input type="text" name="username" required><br>
     <label>Your Email:</label>
     <input type="email" name="email" required>
     <p>
-      <label>Sign up for the email.</label>
+      <label>Want to sign up for the email !!</label>
       <input type="radio" name="signed">
     </p>
       <legend>Your Message</legend>
