--- a/ContactMe.html
+++ b/ContactMe.html
@@ -9,7 +9,7 @@
   Sasaram-821115, Rohtas, Bihar <br>
   Mobile: 7004634985</p>
   <hr>
-  <form action="mailto:vs039037@gmail.com" method="post" enctype="text/plain">
+  <form action="mailto:vs039037@gmail.com" method="post" enctype="multipart/form-data">
     <label>Your Name:</label>
     <input type="text" name="username" required><br>
     <label>Your Email:</label>
